--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,4 @@
+New: App now runs exclusively in the menu bar (hidden from Dock).
 Fixed: Installation error (SHA mismatch) when installing via Homebrew.
 Fixed: App quitting when closing Settings window
 Fixed: Crash when moving basket during animation
