--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,19 +1,6 @@
-Release v3.0
-
-🎉 Major Update - Clipboard Manager Enhancements
-
-New Features:
-- Extract Text button now uses squircle (rounded square) design for better consistency
-- Reset Window Size button relocated to header next to Search for cleaner UI layout
-- OCR "Copied" feedback - Copy button shows green checkmark confirmation before auto-closing
-- OCR window now auto-closes after copying, keeping clipboard manager open
-
-UI Improvements:
-- Search and Reset buttons now have identical hover styling
-- Consistent 20pt padding throughout the clipboard manager interface
-- Left panel entries now extend to bottom without reset button obstruction
+Release v3.0.1
 
 Bug Fixes:
-- Fixed clipboard manager closing when interacting with OCR extracted text window
-- OCR window clicks no longer dismiss the clipboard manager
+- Fixed critical objc_release crash in NotchWindowController timer callbacks
+- Improved memory safety in mouse event handling to prevent crashes during window deallocation
 
