feat: custom menu bar stencil and about icon

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,10 +1,9 @@
-Release v3.1.5
+Release v3.1.6
 
 New:
+- **Menu Bar Icon**: Droppy now features a custom, polished stencil icon in the menu bar (replacing the generic system symbol).
+- **Branding**: The "About" screen now proudly displays the official App Icon.
+
+Fixed in v3.1.5:
 - **Settings Shortcut**: Added a Settings (gear) icon to the shelf when it's empty.
-
-Fixes:
-- **Crash Fix**: Resolved a timer-related crash in Drag Monitor that could occur during usage.
-
-Fixed in v3.1.4:
-- **Icon Compatibility**: Ensured the new app icon uses the correct PNG format for compatibility with all macOS versions.
+- **Crash Fix**: Resolved a timer-related crash in Drag Monitor.
