Fix shelf item hover detection and general cleanup

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,7 +1,6 @@
-## 🛠 Features
+Droppy v3.3.3
 
-- **Dynamic Notch Positioning**: The visual notch now automatically recenters itself when you change screen resolutions or dock/undock your MacBook.
-
-## 🛠 Fixes
-
-- Resolved an issue where the notch could get stuck in the middle of the screen after resolution changes.
+🚀 Fixes & Improvements:
+- Shelf Hover Fix: Significantly improved hover detection for shelf items, ensuring the entire item area is responsive.
+- Internal Optimizations: Refined state management and UI performance.
+- Cleanup: Removed legacy temporary file management logic.
