Fix stepTransactionFlush crash by refactoring window animations and lifecycle

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,5 +1,5 @@
-Droppy v3.3.4
+Droppy v3.3.5
 
 🚀 Fixes & Improvements:
-- Fixed an issue where the notch window would drift toward the middle of the screen during screen resolution changes (e.g. docking/undocking).
-- The notch now automatically repositions to the top-center of the active display.
+- Stability Fix: Resolved a critical 'stepTransactionFlush' crash that occurred during window movements and animations.
+- Refined window lifecycle management to ensure crash-free operation on all macOS versions.
