Fix objc_release crash in ClipboardManager

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,2 +1,3 @@
 Fixes:
 - Fixed notch position not updating when docking/undocking MacBook (screen resolution changes)
+- Fixed objc_release crash in clipboard monitoring loop
