Fix BrightnessManager thread-safety crash

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,35 +1,5 @@
-## Droppy 4.0 — The HUD Update 🎛️
+## Droppy 4.0.1 — Hotfix
 
-This is a HUGE update! Droppy now replaces the ugly macOS system HUDs with beautiful, animated overlays embedded right in your notch.
-
-### ✨ New Features
-
-**🎵 Media Player HUD**
-- Full media controls directly in the notch
-- Album art with smooth crossfade transitions between songs
-- Interactive seek slider with tactile feedback
-- Play/pause, skip forward/back controls
-- Tap album art to open the source app (Safari, Spotify, etc.)
-- Silky smooth collapse-expand animations
-
-**🔊 Volume HUD**
-- Beautiful volume indicator replaces the system HUD
-- Animated icon that morphs between mute/low/high states
-- Smooth liquid glass styling
-- Percentage display with live updates
-
-**🔆 Brightness HUD**
-- Elegant brightness control overlay
-- Dynamic sun icon animation
-- Matches the volume HUD design language
-
-### 🎨 Design
-- All HUDs use the signature Liquid Glass aesthetic
-- Crazy smooth spring animations throughout
-- Perfectly synchronized transitions
-- Icon-centric design that feels native to macOS
-
-### 🔧 Improvements
-- Fixed Homebrew quarantine issue — no more security dialogs on updates
-- Optimized animation performance
-- Better memory management for media metadata
+### 🐛 Fixed
+- Fixed crash in Brightness HUD polling on some systems
+- Thread-safety improvement for display ID access
