Performance improvements, bug fixes, and new features for v9.4.0

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,19 @@
-🚑 Hotfix
+✨ New Features
+- Added hard reset button in About section to completely clear all data
+- Added new tracked folders function
+- Added buttery smooth notch animations for opening/closing and hovering to see media title underneath
+- Added new hover effects for files (more premium look)
+- Added renewed shelf and AirDrop icons
+- Added option to turn off haptics in settings (on by default)
+- Added option to close notch/island by right clicking (off by default, was confusing before)
 
-- Fixed critical regression where hardware media keys (Play/Pause, Next/Previous, Mute, Volume) stopped working
-- Reverted event tap implementation to restore full hardware key functionality
+🐛 Bug Fixes
+- Fixed some stuck settings for menu bar manager
+- Fixed play/pause/next/previous hardware buttons not working
+- Fixed stacks being pushed to shelf staying a stack
+- Fixed shelf opening after adding files (it stayed collapsed before)
+- Fixed caps lock crash while in settings
+- Fixed adding existing files to an existing stack in shelf causing bugs
+- Fixed adding files to an existing stack closing the open shelf
+- Removed marching blue ants outline for cleaner appearance
+- Cleaned up About section layout
