fix: notch/Dynamic Island blocking browser tabs in fullscreen (#150)
- Remove isHovering from shouldAcceptEvents condition
- Window now only blocks clicks when shelf is expanded, drop targeted,
  drag over valid zone, or notification HUD visible
- Hover state only affects visual animation, not mouse event blocking

The issue affected iMacs and Macs without physical notch where the
Dynamic Island UI would intercept clicks meant for browser tabs.

Closes #150

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -32,3 +32,4 @@
 - Fixed NotificationHUD crashes from concurrent database access (#152, #156)
 - Fixed shortcuts flashing and disappearing due to double-trigger race condition (#149, #153)
 - Fixed multi-item clipboard paste not copying all selected items (#154)
+- Fixed notch/Dynamic Island blocking browser tabs and other UI in fullscreen (#150)
